--- a/src/template.html
+++ b/src/template.html
@@ -7,8 +7,28 @@
     <title>Todo List</title>
 </head>
 <body>
-    <div class="add-task">+ Add Task</div>
-
+    <div class="container">
+        <div class="sidebar">
+            <div class="add-task">+ Add Task</div>
+            <div class="add-project">+ Add Project</div>
+            <div class="project-window">
+                <div>
+                    <label for="project">Project Name:</label>
+                    <input type="text" name="project" id="form-project">
+                </div>
+            </div>
+            <div class="project-list">
+                <div class="project">Default</div>
+                <div class="project">Default</div>
+                <div class="project">Default</div>
+            </div>
+        </div>
+        
+        <div class="main">
+            <div class="task-container"></div>
+        </div>
+    </div>
+    
     <div class="task-window">
         <form onsubmit="return false">
             <div>
@@ -38,15 +58,13 @@
 
             <div>
                 <label for="description">Description:</label>
-                <input type="text" name="description" id="form-description">
+                <textarea name="description" id="form-description"></textarea>
             </div>
 
             <div><button id="form-add">Add Task</button></div>
             <div><button id="form-edit">Save Changes</button></div>
         </form>
     </div>
-
-    <div class="task-container"></div>
 </body>
 </html>
 
