Category filtering implemented

--- a/src/template.html
+++ b/src/template.html
@@ -10,13 +10,13 @@
     <div class="container">
         <div class="sidebar">
             <div class="add-task">+ Add Task</div>
-            <div class="add-project">+ Add Project</div>
+            <!-- <div class="add-project">+ Add Project</div>
             <div class="project-window">
                 <div>
                     <label for="project">Project Name:</label>
                     <input type="text" name="project" id="form-project">
                 </div>
-            </div>
+            </div> -->
             <div class="project-list">
                 <div class="project">Default</div>
                 <div class="project">Default</div>
