Fixed style flashing on page load

--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
     <script src="scripts/index.js" type="module"></script>
     <title>clear.ly</title>
 </head>
-<body>
+<body style="display:none">
     <div class="container">
         <div class="sidebar">
             <div class="sidebar-title">clear.ly</div>
