Fixed style flashing on page load

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="0851466d78bd5cd3ffcc.js" type="module"></script>
     <title>clear.ly</title>
 <script defer src="main.js"></script></head>
-<body>
+<body style="display:none">
     <div class="container">
         <div class="sidebar">
             <div class="sidebar-title">clear.ly</div>
